[package]
name = "ema-ua-blocklist"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.7"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.16"

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3.23.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
