[package]
name = "ema-ua-blocklist"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
url = "2.5.7"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"

[dev-dependencies]
mockito = "1.7.1"
tempfile = "3.24.0"
reqwest = { version = "0.12.28", features = ["blocking"] }
