[package]
name = "ema-ua-blocklist"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"
tokio = { version = "1.49.0", features = ["full"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"

[dev-dependencies]
mockito = "1.7.2"
tempfile = "3.24.0"
reqwest = { version = "0.13.1", features = ["blocking"] }
